# pressure_vessels

./: .editorconfig  .env.example  .gitignore  .lycheeignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .tool-versions  AGENT_FILE_STRUCTURE.md  AGENT_GOVERNANCE.md  Makefile  Procfile  README.md  markdownlint-cli2  next_dx_generation_prompt.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
docs/: architecture.md  audit_findings_2026-04-20.yaml  audit_findings_2026-04-21.yaml  audit_findings_2306-04-21.yaml  audit_remediation_prompts_2026-04-18.md  bl-003_delivery_audit_2026-04-18.md  bl-010_optimization_pipeline.md  cloud_getting_started.md  developer_command_reference.md  developer_experience_principles.md  developer_quickstart.md  development_backlog.yaml  dx_reusability_audit_2026-04-20.yaml  full_repo_audit_2026-04-18.md  modular_pressure_vessel_ontology_and_information_model.md  next_audit_generation_prompt.md  next_code_generation_prompt.md  next_dx_generation_prompt.md  next_dx_generation_prompt.yaml  platform_roadmap.yaml  platform_runtime_stack_registry.yaml  platform_setup_guide.md  roadmap_status_audit_2026-04-18.md  semantic_layer_workflows_for_requirements_verification.md  system_engineering_model_modular_scalable_pressure_tank.md  tech-stack.md
scripts/: check_ci_governance.py  check_js_ts_style.py  check_python_style.py  check_readme_anchors.py  check_tech_stack.py  design_and_verify.py  generate_governance_checklist_evidence.py  generate_requirement_artifacts.py  (+1 more)
(+219 files in other folders)
