[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pressure_vessels"
version = "0.1.0"
description = "Pressure vessel deterministic requirement parsing pipeline"
requires-python = ">=3.11,<3.13"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[project.scripts]
pv-check-ci-governance = "pressure_vessels.governance_checks:check_ci_governance_main"
pv-generate-governance-checklist-evidence = "pressure_vessels.governance_checks:generate_governance_checklist_evidence_main"
pv-check-readme-anchors = "pressure_vessels.dev_cli:check_readme_anchors_main"
pv-check-tech-stack = "pressure_vessels.dev_cli:check_tech_stack_main"
pv-suggest-risk-label = "pressure_vessels.dev_cli:suggest_risk_label_main"
pv-scaffold-governance-baseline = "pressure_vessels.governance_scaffold:scaffold_governance_baseline_main"
